--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 # Site Configuration
 # Update NEXT_PUBLIC_SITE_URL with your actual Vercel domain after deployment
 NEXT_PUBLIC_SITE_URL=https://your-domain.vercel.app
+
+# Email Configuration (Nodemailer)
+# Configure these for the contact form to work
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+SMTP_FROM_EMAIL=noreply@riverparkpharmacy.com
+CONTACT_EMAIL=info@riverparkpharmacy.com
